# rotary-target

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/skills/rotary-target/: SKILL.md
configs/: README.md
configs/experiments/: adaptive_gwd_kld_retinanet_r50_dota1.yaml  csl_retinanet_r50_dota1.yaml  ensemble_gwd_kld_adaptive.yaml  gliding_vertex_r50_dota1.yaml  gwd_retinanet_r50_dota1.yaml  kld_retinanet_r50_dota1.yaml  redet_re50_dota1.yaml  roi_trans_r50_dota1.yaml
configs/mmrotate/: README.md  adaptive_gwd_kld_retinanet_r50_fpn_1x_dota_oc.py
docs/: algorithm-adapter.md  data-preparation.md  experiments.md  innovations.md  storage.md
docs/agent-harness/: checks.md  operating-contract.md  review-flow.md  tool-constraints.md
scripts/: run_checks.py
src/rotary_target/: __init__.py  algorithms.py  cli.py  config.py  doctor.py  registry.py  report.py
src/rotary_target/adapters/: __init__.py  base.py  mmrotate.py
src/rotary_target/data/: __init__.py  dota.py  split_config.py
src/rotary_target/ensemble/: __init__.py  fusion.py  geometry.py  io.py
src/rotary_target/losses/: __init__.py  _torch.py  adaptive_gwd_kld.py
tests/: test_algorithms.py  test_cli.py  test_config.py  test_dota.py  test_ensemble_cli.py  test_ensemble_fusion.py  test_ensemble_geometry.py  test_losses.py
