[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rotary-target"
version = "0.1.0"
description = "Harness-first rotated object detection coursework scaffold for DOTA v1.0."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Rotary Target Course Team" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
yaml = ["PyYAML>=6"]

[project.scripts]
rt = "rotary_target.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
